--- a/res/values-pt-rBR/strings.xml
+++ b/res/values-pt-rBR/strings.xml
@@ -17,7 +17,7 @@
 
     <!-- Used in the about dialog -->
     <string name="app_authors">Google, The K-9 Dog Walkers.</string>
-    <!-- NEW: <string name="app_copyright_fmt">Copyright 2008-<xliff:g>%s</xliff:g> The K-9 Dog Walkers. Portions Copyright 2006-<xliff:g>%s</xliff:g> the Android Open Source Project.</string>-->
+    <string name="app_copyright_fmt">Copyright 2008-<xliff:g>%s</xliff:g> The K-9 Dog Walkers. Porções de Copyright 2006-<xliff:g>%s</xliff:g> the Android Open Source Project.</string>
     <string name="app_license">Licenciado sob a Apache License, Versão 2.0.</string>
 
 
@@ -531,8 +531,8 @@ Por favor, nos envie relatórios de bugs, contribua para novas melhorias e faça
     <string name="account_settings_reply_after_quote_label">Resposta após texto da mensagem</string>
     <string name="account_settings_reply_after_quote_summary">Quando respondendo mensagens, o texto original deverá aparecer acima da minha resposta.</string>
 
-    <!-- NEW: <string name="account_settings_strip_signature_label">Strip signatures on reply</string>-->
-    <!-- NEW: <string name="account_settings_strip_signature_summary">Signatures will be removed from quoted messages</string>-->
+    <string name="account_settings_strip_signature_label">Não assinar respostas</string>
+    <string name="account_settings_strip_signature_summary">Assinaturas serão removidas de mensagens respondidas com citação</string>
 
     <string name="account_settings_message_format_label">Formato da Mensagem</string>
     <string name="account_settings_message_format_text">Texto (imagens e formatação serão removidas)</string>
@@ -724,8 +724,8 @@ Por favor, nos envie relatórios de bugs, contribua para novas melhorias e faça
     <string name="sort_latest_first">Mensagens recentes primeiro</string>
     <string name="sort_subject_alpha">Assunto em ordem alfabética</string>
     <string name="sort_subject_re_alpha">Assunto em ordem alfabética reversa</string>
-    <!-- NEW: <string name="sort_sender_alpha">Sender alphabetical</string>-->
-    <!-- NEW: <string name="sort_sender_re_alpha">Sender reverse alphabetical</string>-->
+    <string name="sort_sender_alpha">Remetente (A-Z)</string>
+    <string name="sort_sender_re_alpha">Remetente (Z-A)</string>
     <string name="sort_flagged_first">Mensagens favoritas primeiro</string>
     <string name="sort_flagged_last">Messages não favoritas primeiro</string>
     <string name="sort_unread_first">Não lidas primeiro</string>
